@@ -103,6 +103,7 @@ Andy Harrison
 Andrew Hart (arhart)
 G. Sumner Hayes
 Michael R. Head
+Michael Hearn
 Mike Heffner
 Benjamin Herrenschmidt
 Fernando Herrera
